@@ -1,3 +1,9 @@
+slash-1.0.9
+-----------------------
+*	Slash now counts the number of times a user is moderated up or down.
+
+*	Slash now strips \0 characters from all form values.
+
 slash-1.0.8, 2000.08.18
 -----------------------
 
